fleet manager class to showcase the example

--- a/DesignPatternsDemo/DesignPatternsDemo.csproj
+++ b/DesignPatternsDemo/DesignPatternsDemo.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoordinateOufOfRangeException.cs" />
+    <Compile Include="FleetManager.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
